--- a/zomato clone/style.css
+++ b/zomato clone/style.css
@@ -1,40 +1,39 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-.headerImg
-{
-    position: relative;
-    text-align: center;
-    color: white;
+.headerImg {
+  position: relative;
+  text-align: center;
+  color: white;
 }
-.nav{
-    /* border: 2px solid red; */
-    position: absolute;
-    top:  8px;
-    right: 200px;   
+.nav {
+  /* border: 2px solid red; */
+  position: absolute;
+  top: 8px;
+  right: 200px;
 }
-.nav ul{
-    list-style: none;
-    display: flex;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 2;
-    font-size: 20px;
-    font-weight: 600;
-    padding: 10px;
+.nav ul {
+  list-style: none;
+  display: flex;
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 2;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 10px;
 }
-.nav li{
-    margin: 10px 20px;
+.nav li {
+  margin: 10px 20px;
 }
-.zomatoLogo{
-    /* border: 2px solid red; */
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
+.zomatoLogo {
+  /* border: 2px solid red; */
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
 }
 /* .location{
     border: 2px solid rgb(255, 255, 255);
@@ -82,27 +81,26 @@
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;} */
 
-.firstCard{
+.firstCard {
   /* border: 2px solid red; */
   display: flex;
   height: 300px;
+  margin-top: 30px;
   margin-left: 370px;
   width: 60%;
-  
 }
-.OrderOnline
-{
-    border: 2px solid red;
-    width: 50%;
-    margin: 1px 10px;
+.OrderOnline {
+  border: 2px solid red;
+  width: 50%;
+  margin: 1px 10px;
 }
-.dining{
-    border: 2px solid red;
-    width: 50%;
-    margin: 1px 10px;
+.dining {
+  border: 2px solid red;
+  width: 50%;
+  margin: 1px 10px;
 }
-.NiCl{
-    border: 2px solid red;
-    width: 50%;
-    margin: 1px 10px;
+.NiCl {
+  border: 2px solid red;
+  width: 50%;
+  margin: 1px 10px;
 }
