--- a/zomato clone/style.css
+++ b/zomato clone/style.css
@@ -35,81 +35,26 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
 }
-/* .location{
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    height: 50px;
-    width: 800px;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.dropbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;} */
-
-.firstCard {
-  /* border: 2px solid red; */
-  display: flex;
-  height: 300px;
-  margin-top: 30px;
-  margin-left: 370px;
+.Bar1{
+  border: 5px solid red;
   width: 60%;
+  height: 300px;
+  margin-left: 15%;
 }
-.OrderOnline {
-  border: 5px solid red;
-  width: 50%;
-  margin: 1px 10px;
-  border-radius: 10px;
+.OrderOnline{
+  border: 2px solid rgb(8, 0, 255);
+  width: 25%;
+  height: 250px;
+  position: relative;
+  margin-left: 50px;
+  margin-top: 20px;
 }
-
-.orderImage{
-  border: 2px solid red;
+.OrderOnlineAbsolute{
+  border: 2px solid green;
   position: absolute;
-}
-.dining {
-  border: 5px solid red;
-  width: 50%;
-  margin: 1px 10px;
-  border-radius: 10px;
-}
-.NiCl {
-  border: 5px solid red;
-  width: 50%;
-  margin: 1px 10px;
-  border-radius: 10px;
+  top: 67%;
+  right: 0;
+  width: 100%;
+  height: 80px;
 }
 
