--- a/zomato clone/style.css
+++ b/zomato clone/style.css
@@ -36,21 +36,106 @@
   font-weight: 600;
 }
 .Bar1{
-  border: 5px solid red;
+ /*  border: 5px solid red; */
   width: 60%;
   height: 300px;
-  margin-left: 15%;
+  margin-left: 18%;
+  display: flex;
 }
 .OrderOnline{
-  border: 2px solid rgb(8, 0, 255);
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 20px 20px 20px 20px;
+  width: 25%;
+  height: 250px;
+  position: relative;
+  margin-left: 75px;
+  margin-top: 20px;
+}
+.OrderOnline img{
+  width: 100%;
+  height: 170px; 
+  border-radius: 20px 20px 0px 0px; 
+}
+.OrderOnlineAbsolute{
+ /*  border: 2px solid green; */
+  position: absolute;
+  top: 67%;
+  right: 0;
+  width: 100%;
+  height: 80px;
+  
+}
+.OrderOnlineAbsolute h2{
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 20px;
+  padding-left: 5px;
+  font-weight: 600;
+}
+.OrderOnlineAbsolute p{
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 5px;
+  padding-top: 5px;  
+}
+.nightclub{
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 20px 20px 20px 20px;
   width: 25%;
   height: 250px;
   position: relative;
   margin-left: 50px;
   margin-top: 20px;
 }
-.OrderOnlineAbsolute{
-  border: 2px solid green;
+.nightclub img{
+  width: 100%;
+  height: 170px;
+  border-radius: 20px 20px 0 0;
+}
+.nightclub h2{
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 20px;
+  padding-left: 5px;
+  font-weight: 600;
+}
+.nightclub p{
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 5px;
+  padding-top: 5px;  
+}
+.nightclubAbsolute{
+  /* border: 2px solid green; */
+  position: absolute;
+  top: 67%;
+  right: 0;
+  width: 100%;
+  height: 80px;
+}
+.dining{
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 20px 20px 20px 20px;
+  width: 25%;
+  height: 250px;
+  position: relative;
+  margin-left: 50px;
+  margin-top: 20px;
+}
+.dining img{
+  width: 100%;
+  height: 170px;
+  border-radius: 20px 20px 0px 0px;
+}
+.dining h2{
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 20px;
+  padding-left: 5px;
+  font-weight: 600;
+}
+.dining p{
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 5px;
+  padding-top: 5px;  
+}
+.diningAbsolute{
+ /*  border: 2px solid green; */
   position: absolute;
   top: 67%;
   right: 0;
