--- a/zomato clone/style.css
+++ b/zomato clone/style.css
@@ -7,6 +7,12 @@
   text-align: center;
   color: white;
 }
+.headerImg img{
+  opacity: 0.85;
+}
+.zomatoLogo img{
+  opacity: 1;
+}
 .nav {
   /* border: 2px solid red; */
   position: absolute;
@@ -35,73 +41,81 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
 }
-.Bar1{
- /*  border: 5px solid red; */
+.Bar1 {
+  /*  border: 5px solid red; */
   width: 60%;
   height: 300px;
-  margin-left: 18%;
+  margin-left: 20%;
   display: flex;
+  padding: 10px;
 }
-.OrderOnline{
-  border: 2px solid rgb(0, 0, 0);
+.OrderOnline {
+  border: 2px solid rgb(154, 141, 141);
   border-radius: 20px 20px 20px 20px;
   width: 25%;
   height: 250px;
   position: relative;
-  margin-left: 75px;
+  margin-left: 90px;
   margin-top: 20px;
+  transition: 0.7s;
 }
-.OrderOnline img{
+.OrderOnline:hover {
+  transform: scale(1.1);
+}
+.OrderOnline img {
   width: 100%;
-  height: 170px; 
-  border-radius: 20px 20px 0px 0px; 
+  height: 170px;
+  border-radius: 20px 20px 0px 0px;
 }
-.OrderOnlineAbsolute{
- /*  border: 2px solid green; */
+.OrderOnlineAbsolute {
+  /*  border: 2px solid green; */
   position: absolute;
   top: 67%;
   right: 0;
   width: 100%;
   height: 80px;
-  
 }
-.OrderOnlineAbsolute h2{
+.OrderOnlineAbsolute h2 {
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 20px;
   padding-left: 5px;
   font-weight: 600;
 }
-.OrderOnlineAbsolute p{
+.OrderOnlineAbsolute p {
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 5px;
-  padding-top: 5px;  
+  padding-top: 5px;
 }
-.nightclub{
-  border: 2px solid rgb(0, 0, 0);
+.nightclub {
+  border: 2px solid rgb(154, 141, 141);
   border-radius: 20px 20px 20px 20px;
   width: 25%;
   height: 250px;
   position: relative;
-  margin-left: 50px;
+  margin-left: 20px;
   margin-top: 20px;
+  transition: 0.7s;
 }
-.nightclub img{
+.nightclub:hover {
+  transform: scale(1.1);
+}
+.nightclub img {
   width: 100%;
   height: 170px;
   border-radius: 20px 20px 0 0;
 }
-.nightclub h2{
+.nightclub h2 {
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 20px;
   padding-left: 5px;
   font-weight: 600;
 }
-.nightclub p{
+.nightclub p {
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 5px;
-  padding-top: 5px;  
+  padding-top: 5px;
 }
-.nightclubAbsolute{
+.nightclubAbsolute {
   /* border: 2px solid green; */
   position: absolute;
   top: 67%;
@@ -109,37 +123,40 @@
   width: 100%;
   height: 80px;
 }
-.dining{
-  border: 2px solid rgb(0, 0, 0);
+.dining {
+  border: 2px solid rgb(154, 141, 141);
   border-radius: 20px 20px 20px 20px;
   width: 25%;
   height: 250px;
   position: relative;
-  margin-left: 50px;
+  margin-left: 20px;
   margin-top: 20px;
+  transition: 0.7s;
 }
-.dining img{
+.dining:hover {
+  transform: scale(1.1);
+}
+.dining img {
   width: 100%;
   height: 170px;
   border-radius: 20px 20px 0px 0px;
 }
-.dining h2{
+.dining h2 {
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 20px;
   padding-left: 5px;
   font-weight: 600;
 }
-.dining p{
+.dining p {
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 5px;
-  padding-top: 5px;  
+  padding-top: 5px;
 }
-.diningAbsolute{
- /*  border: 2px solid green; */
+.diningAbsolute {
+  /*  border: 2px solid green; */
   position: absolute;
   top: 67%;
   right: 0;
   width: 100%;
   height: 80px;
 }
-
