--- a/CB Clone/contact.css
+++ b/CB Clone/contact.css
@@ -118,18 +118,16 @@
     width: 100%;
     height: 650px;
     position: relative;
+    display: flex;
 }
-.FormMain{
-    position: absolute;
-     top: 20%;
-     left: 200px;
+.Partition-1{
+  width: 50%;
+  height: 650px;
+  border: 2px solid rgb(243, 18, 18);
 }
-.Title{
-    position: absolute;
-    top: 20px;
-    left: 35%;
-    color: white;
-    font-weight: 600;
-    font-size: 30px ;
-    font-family: Arial, Helvetica, sans-serif;
+.Partition-2{
+  width: 50%;
+  height: 650px;
+  border: 2px solid rgb(243, 18, 18);
 }
+ 
