--- a/Javascript/Arrays/ArrayDB/style.css
+++ b/Javascript/Arrays/ArrayDB/style.css
@@ -26,7 +26,30 @@
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
-.form{
-    border: 2px solid red;
-    height: 500px;
+.formMain{
+    border: 2px solid white;
+    height: 600px;
+    width: 100%;
+    display: flex;
 }
+.form1{
+    border: 2px solid red;
+    height: 200px;
+    margin-top: 100px;
+    margin-left: 600px;
+
+}
+.formMain form{
+    color: rgb(250, 250, 250);
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.formMain input{
+    background-color: white;
+    font-size: 40px;
+    
+}
+
+
+
+   
