--- a/Javascript/Arrays/ArrayDB/style.css
+++ b/Javascript/Arrays/ArrayDB/style.css
@@ -33,10 +33,10 @@
     display: flex;
 }
 .form1{
-    border: 2px solid red;
-    height: 200px;
+    border: 2px solid rgb(246, 255, 0);
+    height: 480px;
     margin-top: 100px;
-    margin-left: 600px;
+    margin-left: 650px;
 
 }
 .formMain form{
@@ -45,8 +45,9 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .formMain input{
+    text-align: center;
     background-color: white;
-    font-size: 40px;
+    font-size: 30px;
     
 }
 
