--- a/Javascript/Arrays/ArrayDB/style.css
+++ b/Javascript/Arrays/ArrayDB/style.css
@@ -1,56 +1,58 @@
-*{
-    padding:0px ;
-    margin:0px ;
+* {
+    padding: 0px;
+    margin: 0px;
     background-color: black;
 }
-.Main{
+
+.Main {
     border: 2px solid red;
     width: 100%;
     position: absolute;
     background-color: aqua;
 }
-.Title{
+
+.Title {
     /* border: 2px solid red; */
-    height:50px;
+    height: 50px;
     width: 60%;
-    padding: 50px;  
-    text-align: center; 
+    padding: 50px;
+    text-align: center;
     position: relative;
     left: 17%;
     background-color: red;
 }
-.Title h1{
-    border: 2px solid white;
+
+.Title h1 {
+    border: 2px solid rgb(255, 255, 255);
     font-size: 60px;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
-.formMain{
-    border: 2px solid white;
+
+.formMain {
+    border: 2px solid rgb(255, 255, 255);
     height: 600px;
     width: 100%;
     display: flex;
 }
-.form1{
+
+.form1 {
     border: 2px solid rgb(246, 255, 0);
     height: 480px;
     margin-top: 100px;
     margin-left: 750px;
 
 }
-.formMain form{
+
+.formMain form {
     color: rgb(250, 250, 250);
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.formMain input{
+
+.formMain input {
     text-align: center;
     background-color: white;
     font-size: 30px;
-    
 }
-
-
-
-   
