--- a/Javascript/Arrays/ArrayDB/style.css
+++ b/Javascript/Arrays/ArrayDB/style.css
@@ -1,7 +1,7 @@
-* {
+/* * {
     padding: 0px;
     margin: 0px;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
 }
 
 .Main {
@@ -12,7 +12,7 @@
 }
 
 .Title {
-    /* border: 2px solid red; */
+    /* border: 2px solid red;
     height: 50px;
     width: 60%;
     padding: 50px;
@@ -56,3 +56,7 @@
     background-color: white;
     font-size: 30px;
 }
+
+.display {
+    color: white;
+} */
