--- a/Javascript/10-DOM/Bulb/style.css
+++ b/Javascript/10-DOM/Bulb/style.css
@@ -1,13 +1,16 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-html,body{
+
+html,
+body {
     height: 100%;
     width: 100%;
 }
 
-#bulb{
+#bulb {
     margin: 50px 50px;
     height: 300px;
     width: 300px;
@@ -15,7 +18,8 @@ html,body{
     border: 4px solid black;
     background-color: rgb(0, 0, 0);
 }
-button{
+
+button {
     padding: 10px 30px;
     font-size: 20px;
     margin: 50px 50px;
