--- a/visitTibet/style.css
+++ b/visitTibet/style.css
@@ -24,6 +24,7 @@ body {
     width: 50%;  
     padding-left: 100px;
     padding-top: 30px;
+    display: flex;
 }
 .navBar a {
     color: black;
@@ -39,6 +40,7 @@ body {
     width: 100%;
     height: 90vh;
     position: relative;
+    display: flex;
 }
 img{
     opacity: 1;
