--- a/visitTibet/style.css
+++ b/visitTibet/style.css
@@ -10,54 +10,61 @@ body {
 
 /* main */
 
-.main{
+.main {
     height: 100px;
     display: flex;
 }
-.logo{
+
+.logo {
     width: 50%;
     padding-top: 25px;
     padding-left: 100px;
-    font-weight: bolder;  
+    font-weight: bolder;
 }
-.navBar{
-    width: 50%;  
+
+.navBar {
+    width: 50%;
     padding-left: 100px;
     padding-top: 30px;
     display: flex;
 }
+
 .navBar a {
     color: black;
     font-size: 25px;
     margin: 5px 20px;
-    text-decoration: none;  
+    text-decoration: none;
     transition: 0.7s;
 }
 
 /* banner */
 
-.banner{
+.banner {
     width: 100%;
     height: 90vh;
     position: relative;
     display: flex;
 }
-img{
+
+img {
     opacity: 1;
 }
-.banner-text{
+
+.banner-text {
     position: absolute;
     font-size: 35px;
     top: 60px;
     left: 50px;
     color: white;
 }
-.banner-btn{
+
+.banner-btn {
     position: absolute;
     top: 60%;
-    left: 55px; 
+    left: 55px;
 }
-button{
+
+button {
     border-radius: 30px;
     height: 80px;
     width: 500px;
@@ -65,14 +72,29 @@ button{
     color: white;
     font-size: 30px;
     font-weight: 200;
-    transition: 0.8s; 
+    transition: 0.8s;
 }
-button:hover{
+
+button:hover {
     background-color: black;
     opacity: 0.9;
 }
-.banner-links{
+
+.banner-links {
     position: absolute;
     top: 90%;
     left: 80px;
+    color: black;
+    font-size: 25px;
+    transition: 0.8s;
+}
+
+.banner-links:hover {
+    transform: scale(1.1);
+}
+
+.banner-links a {
+    margin: 5px 20px;
+    text-decoration: none;
+    color: white
 }
